unpackaged/main/default/objects/OrderItemSummary/OrderItemSummary.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>