unpackaged/main/default/objects/OrderItemSummary/fields/COO__c.field-meta.xml
<CustomField>
    <fullName>COO__c</fullName>
    <formula>Product2.COO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COO</label>
    <type>Text</type>
</CustomField>