unpackaged/main/default/objects/OrderItemSummary/fields/DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStartDate__c</fullName>
    <label>Delivery Start Date</label>
    <type>DateTime</type>
</CustomField>