unpackaged/main/default/objects/OrderItemSummary/fields/hsCode__c.field-meta.xml
<CustomField>
    <fullName>hsCode__c</fullName>
    <formula>Product2.hsCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hsCode</label>
    <type>Text</type>
</CustomField>