unpackaged/main/default/objects/OrderItemSummary/fields/isSerialized__c.field-meta.xml
<CustomField>
    <fullName>isSerialized__c</fullName>
    <formula>Product2.isSerialized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Serialized</label>
    <type>Checkbox</type>
</CustomField>