unpackaged/main/default/objects/OrderItemSummary/fields/LineTotalFormula__c.field-meta.xml
<CustomField>
    <fullName>LineTotalFormula__c</fullName>
    <formula>IF(CONTAINS(TEXT(TotalLineAmount +  TotalLineTaxAmount), &quot;.&quot;),SUBSTITUTE(TEXT(TotalLineAmount +  TotalLineTaxAmount) , &quot;.&quot;, &quot;,&quot;), TEXT(TotalLineAmount +  TotalLineTaxAmount)+&quot;,00&quot;) +
&quot; &quot; + TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Formula</label>
    <type>Text</type>
</CustomField>