unpackaged/main/default/objects/OrderItemSummary/fields/PreparationOperations__c.field-meta.xml
<CustomField>
    <fullName>PreparationOperations__c</fullName>
    <label>Preparation Operations</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>