unpackaged/main/default/objects/OrderItemSummary/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>Tax Rate</label>
    <summarizedField>OrderItemTaxLineItemSummary.Rate</summarizedField>
    <summaryForeignKey>OrderItemTaxLineItemSummary.OrderItemSummaryId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>