unpackaged/main/default/objects/OrderItemSummary/fields/Tech_RepaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>Tech_RepaymentMethod__c</fullName>
    <label>Tech_Repayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Reship</fullName>
            </value>
            <value>
                <fullName>Remplacement</fullName>
                <isActive>false</isActive>
                <label>Remplacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>