unpackaged/main/default/objects/OrderItemSummary/fields/Tech_ReturnedQuantity__c.field-meta.xml
<CustomField>
    <fullName>Tech_ReturnedQuantity__c</fullName>
    <label>Tech_ReturnedQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>