unpackaged/main/default/objects/OrderItemSummary/fields/Tech_ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>Tech_ReturnReason__c</fullName>
    <label>Tech_ReturnReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE01</fullName>
                <label>Item is too big</label>
            </value>
            <value>
                <fullName>RE02</fullName>
                <label>Item is too small</label>
            </value>
            <value>
                <fullName>RE03</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>RE04</fullName>
                <label>Not the correct colour</label>
            </value>
            <value>
                <fullName>RE05</fullName>
                <label>Not the correct material</label>
            </value>
            <value>
                <fullName>RE06</fullName>
                <label>This item doesn&apos;t suit me</label>
            </value>
            <value>
                <fullName>RE07</fullName>
                <label>I have changed my mind</label>
            </value>
            <value>
                <fullName>RE08</fullName>
                <label>Delivery time was too long</label>
            </value>
            <value>
                <fullName>RE09</fullName>
                <label>Item is defective</label>
            </value>
            <value>
                <fullName>RE10</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>