unpackaged/main/default/objects/OrderItemSummary/fields/Unresolved_PEs__c.field-meta.xml
<CustomField>
    <fullName>Unresolved_PEs__c</fullName>
    <description>Update via Flow SOM 945</description>
    <inlineHelpText>Total number of Unresolved Process Exceptions</inlineHelpText>
    <label>Unresolved PEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>